--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "uniqid": "^5.4.0"
   }
 }
